--- a/keeper.client/src/assets/scss/_variables.scss
+++ b/keeper.client/src/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $themes: (
     "body-bg": #fef6f0,
     // Dropdown color
     "primary": #ded6e9,
-    // Navbar hover color
+    // Navbar button color
     "secondary": #e9d8d6,
     "success": #9ddab7,
     // Button color
